--- a/203-NVC-Boot-FormBasedApp1/pom.xml
+++ b/203-NVC-Boot-FormBasedApp1/pom.xml
@@ -49,6 +49,14 @@
 			<version>9.0.31</version>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.12</version>
+			<scope>provided</scope>
+		</dependency>
+
 	</dependencies>
 
 	<build>
