--- a/204-MVC-Boot-StudentRegistration-FormTagLib/pom.xml
+++ b/204-MVC-Boot-StudentRegistration-FormTagLib/pom.xml
@@ -54,6 +54,10 @@
 			<version>9.0.31</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-devtools</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
